# code-review-assistant

./: .env.example  .gitignore  README.md  agents.py  aggregator.py  analyzers.py  commands.txt  langgraph_pipeline.py  loader.py  main.py  prompts.py  pyproject.toml  requirements.txt  test_gemini.py
backend/: .env.example  Dockerfile  agents.py  aggregator.py  analyzers.py  context_builder.py  database.py  github_integration.py  langgraph_pipeline.py  loader.py  main.py  pdf_generator.py  plagiarism_detector.py  prompts.py  pyproject.toml  run.py  validators.py
backend/tests/: test_context_builder.py  test_pdf_generation.py  test_pipeline_accuracy.py  test_validators.py
backend/tests/sample_inputs/: Eval_test1.java  Eval_test2.py  Eval_test3.js  Eval_test4.py  UserAuthService.java  all_issues.py  all_issues_humanised.py  buggy_javascript.js  buggy_python2.py  clean_code.py  evil_java.java  evil_javascript.js  shoppingCart.js  student_grade_manager.py  test_human.py  vulnerable_java2.java
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/backend/[...path]/: route.ts
frontend/app/dashboard/[jobId]/: page.tsx
frontend/app/results/[jobId]/: page.tsx
frontend/components/export/: ExportBar.tsx
frontend/components/findings/: FindingCard.tsx  FindingsPanel.tsx
frontend/components/heatmap/: FileHeatmap.tsx
frontend/components/pipeline/: PipelineTracker.tsx
frontend/components/score/: ScoreGauge.tsx  SubScoreRings.tsx
frontend/components/upload/: DropZone.tsx
frontend/lib/: api.ts  useAnalysisStatus.ts
tests/: test_integration.py
tests/sample_inputs/: buggy_python.py  leaky_js.js  vulnerable_java.java
